feat: add /v2/channels/:id detail page (#1064)
